File name improvement, pagespeed improvmeents

--- a/en/treasure-hunt.html
+++ b/en/treasure-hunt.html
@@ -18,7 +18,10 @@
           <!-- Logo -->
           <div class="flex items-center">
             <a href="index.html" class="flex items-center">
-              <img src="../assets/images/bitcoin-friesland-logo.png" alt="Bitcoin Friesland Logo" class="h-8 w-8">
+              <picture>
+        <source srcset="../assets/images/bitcoin-friesland-logo-small.webp" type="image/webp">
+        <img src="../assets/images/bitcoin-friesland-logo-small.png" alt="Bitcoin Friesland Logo" class="h-8 w-8" width="32" height="32" style="width: 32px; height: 32px;" width="32" height="32">
+      </picture>
               <span class="ml-2 text-xl font-bold">
                 <span class="text-friesland-blue">Bitcoin</span><span class="text-bitcoin-orange">Friesland</span>
               </span>
@@ -72,7 +75,7 @@
                   <span>English</span>
                 </a>
                 <a href="../fy/treasure-hunt.html" class="flex items-center px-3 py-2 hover:bg-gray-50 text-sm">
-                  <img src="../assets/images/frisian-flag.png" alt="Frysk" class="w-6 h-4 object-cover rounded-sm mr-2">
+                  <img src="../assets/images/frisian-flag-small.png" alt="Frysk" class="w-6 h-4 object-cover rounded-sm mr-2" width="24" height="16">
                   <span>Frysk</span>
                 </a>
               </div>
@@ -80,7 +83,7 @@
             
             <!-- Mobile hamburger menu -->
             <div class="mobile-only">
-              <button onclick="toggleMobileMenu()" class="relative w-10 h-10 flex items-center justify-center rounded-lg text-gray-700 hover:text-friesland-blue hover:bg-gray-100 transition-colors">
+              <button onclick="toggleMobileMenu()" class="relative w-10 h-10 flex items-center justify-center rounded-lg text-gray-700 hover:text-friesland-blue hover:bg-gray-100 transition-colors" aria-label="Open menu">
                 <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                 </svg>
@@ -376,7 +379,10 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
           <div class="md:col-span-2">
             <div class="flex items-center mb-4">
-              <img src="../assets/images/bitcoin-friesland-logo.png" alt="Bitcoin Friesland Logo" class="h-8 w-8">
+              <picture>
+        <source srcset="../assets/images/bitcoin-friesland-logo-small.webp" type="image/webp">
+        <img src="../assets/images/bitcoin-friesland-logo-small.png" alt="Bitcoin Friesland Logo" class="h-8 w-8" width="32" height="32" style="width: 32px; height: 32px;" width="32" height="32">
+      </picture>
               <span class="ml-2 text-xl font-bold">
                 <span class="text-friesland-blue">Bitcoin</span><span class="text-bitcoin-orange">Fryslân</span>
               </span>
