--- a/nl/index.html
+++ b/nl/index.html
@@ -18,7 +18,10 @@
           <!-- Logo -->
           <div class="flex items-center">
             <a href="index.html" class="flex items-center">
-              <img src="../assets/images/bitcoin-friesland-logo.png" alt="Bitcoin Friesland Logo" class="h-8 w-8">
+              <picture>
+        <source srcset="../assets/images/bitcoin-friesland-logo-small.webp" type="image/webp">
+        <img src="../assets/images/bitcoin-friesland-logo-small.png" alt="Bitcoin Friesland Logo" class="h-8 w-8" width="32" height="32" style="width: 32px; height: 32px;" width="32" height="32">
+      </picture>
               <span class="ml-2 text-xl font-bold">
                 <span class="text-friesland-blue">Bitcoin</span><span class="text-bitcoin-orange">Friesland</span>
               </span>
@@ -72,7 +75,7 @@
                   <span>English</span>
                 </a>
                 <a href="../fy/index.html" class="flex items-center px-3 py-2 hover:bg-gray-50 text-sm">
-                  <img src="../assets/images/frisian-flag.png" alt="Frysk" class="w-6 h-4 object-cover rounded-sm mr-2">
+                  <img src="../assets/images/frisian-flag-small.png" alt="Frysk" class="w-6 h-4 object-cover rounded-sm mr-2" width="24" height="16">
                   <span>Frysk</span>
                 </a>
               </div>
@@ -80,7 +83,7 @@
             
             <!-- Mobile hamburger menu -->
             <div class="mobile-only">
-              <button onclick="toggleMobileMenu()" class="relative w-10 h-10 flex items-center justify-center rounded-lg text-gray-700 hover:text-friesland-blue hover:bg-gray-100 transition-colors">
+              <button onclick="toggleMobileMenu()" class="relative w-10 h-10 flex items-center justify-center rounded-lg text-gray-700 hover:text-friesland-blue hover:bg-gray-100 transition-colors" aria-label="Menu openen">
                 <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                 </svg>
@@ -131,7 +134,10 @@
             <div class="mt-10 sm:mt-12 relative sm:mx-auto lg:mt-0 lg:col-span-6 lg:flex lg:items-center">
               <div class="relative mx-auto w-full max-w-sm lg:max-w-md">
                 <div class="relative block w-full bg-white rounded-lg shadow-lg overflow-hidden">
-                  <img src="../assets/images/bitcoin-friesland-logo.png" alt="Bitcoin Friesland Logo" class="w-full p-6 sm:p-8">
+                  <picture>
+        <source srcset="../assets/images/bitcoin-friesland-logo-large.webp" type="image/webp">
+        <img src="../assets/images/bitcoin-friesland-logo-large.png" alt="Bitcoin Friesland Logo" class="w-full p-6 sm:p-8" style="max-width: 256px; height: auto;" width="256" height="256" style="max-width: 256px; height: auto;" width="256" height="256">
+      </picture>
                   <div class="absolute inset-0 bg-gradient-to-r from-friesland-blue/10 to-bitcoin-orange/10 mix-blend-multiply"></div>
                 </div>
               </div>
@@ -259,7 +265,7 @@
           <div class="bg-white p-8 rounded-xl shadow-md border border-gray-100 hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
             <div class="flex items-center mb-4">
               <div class="rounded-full bg-bitcoin-orange/10 p-3 mr-4">
-                <img src="../assets/images/bitcoin-logo.png" alt="Bitcoin Logo" class="h-6 w-6">
+                <img src="../assets/images/bitcoin-logo.png" alt="Bitcoin Logo" class="h-6 w-6" style="width: 24px; height: 24px;" width="24" height="24">
               </div>
               <h3 class="text-xl font-bold">Wat is Bitcoin?</h3>
             </div>
@@ -355,7 +361,7 @@
               <div class="text-xs text-gray-600 font-medium">Gemeenschap</div>
             </div>
             <div class="p-6 pt-3 flex flex-col flex-grow">
-              <img src="../assets/images/placeholder.svg" alt="Bijeenkomsten en Meetups" class="w-full h-32 object-cover rounded-lg mb-4" onerror="this.style.display='none'">
+              <img src="../assets/images/placeholder.svg" width="300" height="200" alt="Bijeenkomsten en Meetups" class="w-full h-32 object-cover rounded-lg mb-4" onerror="this.style.display='none'">
               <p class="text-gray-700 mb-4 text-left flex-grow">Overzicht van alle Bitcoin meetups</p>
               <a href="meetings.html" class="w-full flex items-center justify-center border border-blue-500 text-blue-600 px-4 py-2 rounded-lg font-medium hover:bg-blue-50 transition-colors">
                 Bezoek <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
@@ -504,7 +510,10 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
           <div class="md:col-span-2">
             <div class="flex items-center mb-4">
-              <img src="../assets/images/bitcoin-friesland-logo.png" alt="Bitcoin Friesland Logo" class="h-8 w-8">
+              <picture>
+        <source srcset="../assets/images/bitcoin-friesland-logo-small.webp" type="image/webp">
+        <img src="../assets/images/bitcoin-friesland-logo-small.png" alt="Bitcoin Friesland Logo" class="h-8 w-8" width="32" height="32" style="width: 32px; height: 32px;" width="32" height="32">
+      </picture>
               <span class="ml-2 text-xl font-bold">
                 <span class="text-friesland-blue">Bitcoin</span><span class="text-bitcoin-orange">Fryslân</span>
               </span>
