--- a/fy/treasure-hunt.html
+++ b/fy/treasure-hunt.html
@@ -205,6 +205,15 @@
                   Dei 1 speurtocht
                 </h2>
                 
+                <div class="max-w-2xl mx-auto text-center mb-8">
+                  <p class="text-lg text-gray-700 font-medium mb-2">
+                    👇 Scroll yn it formulier hjirûnder om alle fragen te sjen
+                  </p>
+                  <p class="text-sm text-gray-600">
+                    Folje it formulier yn om diel te nimmen oan de speurtocht (formulier is yn it Nederlânsk)
+                  </p>
+                </div>
+                
                 <div class="flex justify-center">
                   <iframe 
                     src="https://formstr.app/f/naddr1qvzqqqr4mqpzpy5d7dpa9p0529t267vrjdfxk32t960czzvv6pr9vxtcag4wsz7eqythwumn8ghj7un9d3shjtnswf5k6ctv9ehx2ap0qq8hxur9w4e8gmmrdp6z6erpvucs75u4gt?viewKey=2c169704ed5ea3ab7cd5937b0679eb4fe375e4016e019de2b1b822990455c58d" 
