--- a/en/links.html
+++ b/en/links.html
@@ -159,17 +159,17 @@
                 <!-- Exchanges categorie -->
                 <div class="link-category">
                   <h3>💱 Exchanges</h3>
-                  <a href="https://bitvavo.com" target="_blank" class="link-item">
-                    <h4>Bitvavo</h4>
-                    <p>Dutch cryptocurrency exchange</p>
+                  <a href="https://strike.me" target="_blank" class="link-item">
+                    <h4>Strike</h4>
+                    <p>Lightning-native Bitcoin payment app</p>
                   </a>
-                  <a href="https://www.kraken.com" target="_blank" class="link-item">
-                    <h4>Kraken</h4>
-                    <p>International cryptocurrency exchange</p>
+                  <a href="https://bitonic.nl" target="_blank" class="link-item">
+                    <h4>Bitonic</h4>
+                    <p>Dutch Bitcoin broker since 2012</p>
                   </a>
-                  <a href="https://relai.app" target="_blank" class="link-item">
-                    <h4>Relai</h4>
-                    <p>Simple Bitcoin-only app for Europe</p>
+                  <a href="https://wave.space" target="_blank" class="link-item">
+                    <h4>wave.space</h4>
+                    <p>European Bitcoin-only exchange platform</p>
                   </a>
                 </div>
                 
