--- a/fy/links.html
+++ b/fy/links.html
@@ -159,17 +159,17 @@
                 <!-- Exchanges categorie -->
                 <div class="link-category">
                   <h3>💱 Exchanges</h3>
-                  <a href="https://bitvavo.com" target="_blank" class="link-item">
-                    <h4>Bitvavo</h4>
-                    <p>Nederlânske cryptocurrency exchange</p>
+                  <a href="https://strike.me" target="_blank" class="link-item">
+                    <h4>Strike</h4>
+                    <p>Lightning-native Bitcoin betellings-app</p>
                   </a>
-                  <a href="https://www.kraken.com" target="_blank" class="link-item">
-                    <h4>Kraken</h4>
-                    <p>Ynternasjonale cryptocurrency exchange</p>
+                  <a href="https://bitonic.nl" target="_blank" class="link-item">
+                    <h4>Bitonic</h4>
+                    <p>Nederlânske Bitcoin broker sûnt 2012</p>
                   </a>
-                  <a href="https://relai.app" target="_blank" class="link-item">
-                    <h4>Relai</h4>
-                    <p>Ienfâldige Bitcoin-only app foar Europa</p>
+                  <a href="https://wave.space" target="_blank" class="link-item">
+                    <h4>wave.space</h4>
+                    <p>Europeesk Bitcoin-only exchange platfoarm</p>
                   </a>
                 </div>
                 
