Nieuwe versie speurtocht

--- a/fy/treasure-hunt.html
+++ b/fy/treasure-hunt.html
@@ -198,25 +198,28 @@
                 </div>
               </div>
             </section>
-            <!-- Day 1 Hunt Section -->
+            <!-- Speurtocht Section -->
             <section id="start-hunting" class="py-20 bg-gradient-to-br from-gray-50 to-white">
               <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <h2 class="text-3xl font-bold text-gray-900 mb-10 text-center">
-                  Dei 1 speurtocht
+                  Speurtocht
                 </h2>
                 
                 <div class="max-w-2xl mx-auto text-center mb-8">
                   <p class="text-lg text-gray-700 font-medium mb-2">
                     👇 Scroll yn it formulier hjirûnder om alle fragen te sjen
                   </p>
-                  <p class="text-sm text-gray-600">
-                    Folje it formulier yn om diel te nimmen oan de speurtocht (formulier is yn it Nederlânsk)
+                  <p class="text-sm text-gray-600 mb-2">
+                    Folje it formulier yn om diel te nimmen oan de speurtocht
+                  </p>
+                  <p class="text-sm text-bitcoin-orange font-medium">
+                    Jo kinne meidwaan oant 12 july
                   </p>
                 </div>
                 
                 <div class="flex justify-center">
                   <iframe 
-                    src="https://formstr.app/f/naddr1qvzqqqr4mqpzpy5d7dpa9p0529t267vrjdfxk32t960czzvv6pr9vxtcag4wsz7eqythwumn8ghj7un9d3shjtnswf5k6ctv9ehx2ap0qq8hxur9w4e8gmmrdp6z6erpvucs75u4gt?viewKey=2c169704ed5ea3ab7cd5937b0679eb4fe375e4016e019de2b1b822990455c58d" 
+                    src="https://formstr.app/f/naddr1qvzqqqr4mqpzqsqxv26ushs6lx4hhy0yk9yqx2m8xgvz37jdsr4ncwmj2khcd0fhqythwumn8ghj7un9d3shjtnswf5k6ctv9ehx2ap0qqrxxujewfhyzv95ad7?viewKey=ed94e3cebf8ecabc72115f30c11985a953671b8b0d459362367d6e3b8070cde6" 
                     height="700px" 
                     width="480px" 
                     frameborder="0" 
