Add NodeRunners Conference 2025 and update meetings pages
- Created optimized image formats for noderunners-conference-2025.jpg (large, medium, small, compressed versions in both JPG and WebP)
- Added NodeRunners Conference 2025 as new upcoming event on November 1, 2025 at Generator Oosterpark, Amsterdam
- Updated button link from placeholder to https://noderunners.network/
- Moved July 3, 2025 Bitcoin Friesland meetup from upcoming to past events
- Applied changes consistently across all three language versions (Dutch, English, Frisian)
- Fixed button text from 'Meer info binnenkort' to 'Bezoek' for consistency

--- a/nl/meetings.html
+++ b/nl/meetings.html
@@ -173,8 +173,8 @@
       
       <!-- Bezoek button -->
       <div class="px-6 pb-6">
-        <a href="#" target="_blank" rel="noopener noreferrer" class="w-full flex items-center justify-center border border-blue-500 text-blue-600 px-4 py-2 rounded-lg font-medium hover:bg-blue-50 transition-colors">
-          Meer info binnenkort <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
+        <a href="https://noderunners.network/" target="_blank" rel="noopener noreferrer" class="w-full flex items-center justify-center border border-blue-500 text-blue-600 px-4 py-2 rounded-lg font-medium hover:bg-blue-50 transition-colors">
+          Bezoek <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
         </a>
       </div>
     </div>
