Mark treasure hunt as ended across all languages
- Updated all three treasure hunt pages (Dutch, English, Frisian) to indicate the treasure hunt has ended
- Added prominent red notice boxes announcing the end of the Bitcoin Treasure Hunt in Sneek
- Removed active treasure hunt form sections from all language versions
- Updated hero sections with 'ended' messaging and thanks to participants
- Changed call-to-action buttons from 'Start hunting' to 'View Bitcoin Map'
- Updated text to past tense (were hidden vs are hidden)
- Maintained community engagement sections encouraging users to join Telegram group
- All treasure hunt educational content preserved for reference

--- a/fy/treasure-hunt.html
+++ b/fy/treasure-hunt.html
@@ -114,19 +114,25 @@
               <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="max-w-3xl mx-auto text-center">
                   <h1 class="text-4xl font-extrabold tracking-tight text-gray-900 sm:text-5xl mb-8">
-                    Speurtocht
+                    Skattejacht
                   </h1>
+                  <div class="bg-red-50 border border-red-200 rounded-lg p-6 mb-8">
+                    <h2 class="text-2xl font-bold text-red-800 mb-4">Skattejacht Beëinige</h2>
+                    <p class="text-red-700 text-lg leading-relaxed">
+                      De Bitcoin Skattejacht yn Snits is beëinige. Tank oan alle dielnimmers dy't meidien hawwe! Hâld ús webside en Telegram groep yn 'e gaten foar takomstige eveneminten en aktiviteiten.
+                    </p>
+                  </div>
                   <div class="prose prose-lg text-gray-600 mx-auto">
                     <p class="text-lg leading-relaxed mb-6">
-                      Op de digitale kaart fan Snits binne in oantal satoshis ferstopt. Satoshis (sats) binne in diel fan in Bitcoin, krekt as senten. Speurje jo mei? Dan kinne jo as jo sats yn Snits fûn hawwe miskien wol in lekker iisje of wat boadskippen dermei ôfrekkenje.
+                      Op de digitale kaart fan Snits wiene in oantal satoshis ferstoppe. Satoshis (sats) binne in diel fan in Bitcoin, krekt as sinten. De skattejacht is no beëinige, mar jo kinne noch altyd by lokale ûndernimmers yn Snits mei Bitcoin betelje.
                     </p>
                   </div>
                   <div class="mt-10 flex flex-col sm:flex-row gap-6 justify-center">
-                    <a href="#start-hunting" class="bg-friesland-blue hover:bg-friesland-blue/90 text-white text-lg px-8 py-6 h-auto rounded-xl shadow-md transition-all duration-300 hover:shadow-lg hover:-translate-y-1 inline-flex items-center justify-center">
-                      Direkt speuren
+                    <a href="map.html" class="bg-friesland-blue hover:bg-friesland-blue/90 text-white text-lg px-8 py-6 h-auto rounded-xl shadow-md transition-all duration-300 hover:shadow-lg hover:-translate-y-1 inline-flex items-center justify-center">
+                      Besjoch Bitcoin Kaart
                     </a>
                     <a href="#meet-hunters" class="text-friesland-blue hover:text-friesland-blue/80 hover:underline transition-colors inline-flex items-center text-lg font-medium mt-2">
-                      Moetsje oare speurders
+                      Moetsje de Bitcoin mienskip
                       <svg class="ml-2 h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m0 0l7-7m0 7H3"></path>
                       </svg>
@@ -195,37 +201,6 @@
                       </div>
                     </li>
                   </ul>
-                </div>
-              </div>
-            </section>
-            <!-- Speurtocht Section -->
-            <section id="start-hunting" class="py-20 bg-gradient-to-br from-gray-50 to-white">
-              <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <h2 class="text-3xl font-bold text-gray-900 mb-10 text-center">
-                  Speurtocht
-                </h2>
-                
-                <div class="max-w-2xl mx-auto text-center mb-8">
-                  <p class="text-lg text-gray-700 font-medium mb-2">
-                    👇 Scroll yn it formulier hjirûnder om alle fragen te sjen
-                  </p>
-                  <p class="text-sm text-gray-600 mb-2">
-                    Folje it formulier yn om diel te nimmen oan de speurtocht
-                  </p>
-                  <p class="text-sm text-bitcoin-orange font-medium">
-                    Jo kinne meidwaan oant 12 july
-                  </p>
-                </div>
-                
-                <div class="flex justify-center">
-                  <iframe 
-                    src="https://formstr.app/f/naddr1qvzqqqr4mqpzqsqxv26ushs6lx4hhy0yk9yqx2m8xgvz37jdsr4ncwmj2khcd0fhqythwumn8ghj7un9d3shjtnswf5k6ctv9ehx2ap0qqrxxujewfhyzv95ad7?viewKey=ed94e3cebf8ecabc72115f30c11985a953671b8b0d459362367d6e3b8070cde6" 
-                    height="700px" 
-                    width="480px" 
-                    frameborder="0" 
-                    style="border-style:none;box-shadow:0px 0px 2px 2px rgba(0,0,0,0.2);" 
-                    cellspacing="0">
-                  </iframe>
                 </div>
               </div>
             </section>
