--- a/nl/treasure-hunt.html
+++ b/nl/treasure-hunt.html
@@ -116,17 +116,23 @@
                   <h1 class="text-4xl font-extrabold tracking-tight text-gray-900 sm:text-5xl mb-8">
                     Speurtocht
                   </h1>
+                  <div class="bg-red-50 border border-red-200 rounded-lg p-6 mb-8">
+                    <h2 class="text-2xl font-bold text-red-800 mb-4">Speurtocht Afgelopen</h2>
+                    <p class="text-red-700 text-lg leading-relaxed">
+                      De Bitcoin Speurtocht in Sneek is afgelopen. Bedankt aan alle deelnemers die hebben meegedaan! Houd onze website en Telegram groep in de gaten voor toekomstige evenementen en activiteiten.
+                    </p>
+                  </div>
                   <div class="prose prose-lg text-gray-600 mx-auto">
                     <p class="text-lg leading-relaxed mb-6">
-                      Op de digitale kaart van Sneek zijn een aantal satoshis verstopt. Satoshis (sats) zijn een deel van een Bitcoin, net zoals centen. Speur jij mee? Dan kun je als je sats in Sneek gevonden hebt misschien wel een lekker ijsje of wat boodschappen ermee afrekenen.
+                      Op de digitale kaart van Sneek waren een aantal satoshis verstopt. Satoshis (sats) zijn een deel van een Bitcoin, net zoals centen. De speurtocht is nu afgelopen, maar je kunt nog steeds bij lokale ondernemers in Sneek met Bitcoin betalen.
                     </p>
                   </div>
                   <div class="mt-10 flex flex-col sm:flex-row gap-6 justify-center">
-                    <a href="#start-hunting" class="bg-friesland-blue hover:bg-friesland-blue/90 text-white text-lg px-8 py-6 h-auto rounded-xl shadow-md transition-all duration-300 hover:shadow-lg hover:-translate-y-1 inline-flex items-center justify-center">
-                      Direct speuren
+                    <a href="map.html" class="bg-friesland-blue hover:bg-friesland-blue/90 text-white text-lg px-8 py-6 h-auto rounded-xl shadow-md transition-all duration-300 hover:shadow-lg hover:-translate-y-1 inline-flex items-center justify-center">
+                      Bekijk Bitcoin Kaart
                     </a>
                     <a href="#meet-hunters" class="text-friesland-blue hover:text-friesland-blue/80 hover:underline transition-colors inline-flex items-center text-lg font-medium mt-2">
-                      Ontmoet andere speurders
+                      Ontmoet de Bitcoin gemeenschap
                       <svg class="ml-2 h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m0 0l7-7m0 7H3"></path>
                       </svg>
@@ -195,37 +201,6 @@
                       </div>
                     </li>
                   </ul>
-                </div>
-              </div>
-            </section>
-            <!-- Hunt Section -->
-            <section id="start-hunting" class="py-20 bg-gradient-to-br from-gray-50 to-white">
-              <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <h2 class="text-3xl font-bold text-gray-900 mb-10 text-center">
-                  Speurtocht
-                </h2>
-                
-                <div class="max-w-2xl mx-auto text-center mb-8">
-                  <p class="text-lg text-gray-700 font-medium mb-2">
-                    👇 Scroll in het formulier hieronder om alle vragen te zien
-                  </p>
-                  <p class="text-sm text-gray-600 mb-2">
-                    Vul het formulier in om deel te nemen aan de speurtocht
-                  </p>
-                  <p class="text-sm text-bitcoin-orange font-medium">
-                    Je kunt meedoen tot 12 juli
-                  </p>
-                </div>
-                
-                <div class="flex justify-center">
-                  <iframe 
-                    src="https://formstr.app/f/naddr1qvzqqqr4mqpzqsqxv26ushs6lx4hhy0yk9yqx2m8xgvz37jdsr4ncwmj2khcd0fhqythwumn8ghj7un9d3shjtnswf5k6ctv9ehx2ap0qqrxxujewfhyzv95ad7?viewKey=ed94e3cebf8ecabc72115f30c11985a953671b8b0d459362367d6e3b8070cde6" 
-                    height="700px" 
-                    width="480px" 
-                    frameborder="0" 
-                    style="border-style:none;box-shadow:0px 0px 2px 2px rgba(0,0,0,0.2);" 
-                    cellspacing="0">
-                  </iframe>
                 </div>
               </div>
             </section>
