--- a/nl/map.html
+++ b/nl/map.html
@@ -364,7 +364,7 @@
                             </a>
                           </td>
                           <td class="py-3 px-4 text-gray-600">Street Musician</td>
-                          <td class="py-3 px-4 text-gray-600">Centrum (Saturdays)</td>
+                          <td class="py-3 px-4 text-gray-600">Centrum (Zaterdagen)</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
