--- a/nl/map.html
+++ b/nl/map.html
@@ -1032,7 +1032,7 @@
                       <tr class="border-b border-gray-100 hover:bg-gray-50">
                           <td class="py-3 px-4 font-medium">
                             <a href="https://www.spar.nl/winkels/spar-city-leeuwarden-209/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
-                              Spar
+                              SPAR city
                               <svg class="ml-1 h-3 w-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
                               </svg>
