--- a/nl/map.html
+++ b/nl/map.html
@@ -1057,8 +1057,8 @@
                           </td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
-                              <svg class="h-5 w-5 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                               </svg>
                             </div>
                           </td>
@@ -1073,7 +1073,7 @@
                             </a>
                           </td>
                           <td class="py-3 px-4 text-gray-600">LEGO Rental</td>
-                          <td class="py-3 px-4 text-gray-600">Willem Barentszstraat 3</td>
+                          <td class="py-3 px-4 text-gray-600">W. Barentszstraat 3</td>
                           <td class="py-3 px-4 text-gray-600">West-Terschelling</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
