--- a/nl/map.html
+++ b/nl/map.html
@@ -1074,7 +1074,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">LEGO Rental</td>
                           <td class="py-3 px-4 text-gray-600">W. Barentszstraat 3</td>
-                          <td class="py-3 px-4 text-gray-600">W. Terschelling</td>
+                          <td class="py-3 px-4 text-gray-600">W. Terschellng</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
