--- a/nl/map.html
+++ b/nl/map.html
@@ -13,7 +13,7 @@
     <div id="root">
           
     <nav class="sticky top-0 z-50 transition-all duration-300 bg-white">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">tersch
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-16">
           <!-- Logo -->
           <div class="flex items-center">
@@ -1050,8 +1050,8 @@
                           </td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
-                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              <svg class="h-5 w-5 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                               </svg>
                             </div>
                           </td>
