--- a/nl/map.html
+++ b/nl/map.html
@@ -1038,7 +1038,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Supermarket</td>
+                          <td class="py-3 px-4 text-gray-600">Supermarkt</td>
                           <td class="py-3 px-4 text-gray-600">Wirdumerdijk 7</td>
                           <td class="py-3 px-4 text-gray-600">Leeuwarden</td>
                           <td class="py-3 px-4 text-center">
@@ -1072,7 +1072,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">LEGO Rental</td>
+                          <td class="py-3 px-4 text-gray-600">Lego verhuur</td>
                           <td class="py-3 px-4 text-gray-600">W. Barentszstraat 3</td>
                           <td class="py-3 px-4 text-gray-600">W. Terschellng</td>
                           <td class="py-3 px-4 text-center">
@@ -1106,7 +1106,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Charter Flights</td>
+                          <td class="py-3 px-4 text-gray-600">Chartervluchten</td>
                           <td class="py-3 px-4 text-gray-600">Melkemastate 10</td>
                           <td class="py-3 px-4 text-gray-600">Leeuwarden</td>
                           <td class="py-3 px-4 text-center">
