--- a/nl/map.html
+++ b/nl/map.html
@@ -329,7 +329,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Printing</td>
+                          <td class="py-3 px-4 text-gray-600">Drukkerij</td>
                           <td class="py-3 px-4 text-gray-600">Graaf Adolfstraat 36-C</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -426,7 +426,7 @@
                           <td class="py-3 px-4 font-medium">
                             E.M Enjoy
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Sandwich Shop</td>
+                          <td class="py-3 px-4 text-gray-600">Broodjeszaak</td>
                           <td class="py-3 px-4 text-gray-600">Grootzand 49</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -630,7 +630,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Ice Cream Shop</td>
+                          <td class="py-3 px-4 text-gray-600">IJssalon</td>
                           <td class="py-3 px-4 text-gray-600">Leeuwarderweg 1</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
