--- a/nl/map.html
+++ b/nl/map.html
@@ -363,7 +363,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Street Musician</td>
+                          <td class="py-3 px-4 text-gray-600">Straatmuzikant</td>
                           <td class="py-3 px-4 text-gray-600">Centrum (Zaterdagen)</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -800,7 +800,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Gemstones</td>
+                          <td class="py-3 px-4 text-gray-600">Edelstenen</td>
                           <td class="py-3 px-4 text-gray-600">Kleinzand 151</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -834,7 +834,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Venue Rental</td>
+                          <td class="py-3 px-4 text-gray-600">Zaalverhuur</td>
                           <td class="py-3 px-4 text-gray-600">Industrieweg 18-A</td>
                           <td class="py-3 px-4 text-gray-600">Heerenveen</td>
                           <td class="py-3 px-4 text-center">
