--- a/nl/map.html
+++ b/nl/map.html
@@ -295,7 +295,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Computers and Maintenance</td>
+                          <td class="py-3 px-4 text-gray-600">Computers en onderhoud</td>
                           <td class="py-3 px-4 text-gray-600">De Wearen 20</td>
                           <td class="py-3 px-4 text-gray-600">Oudega (SWF)</td>
                           <td class="py-3 px-4 text-center">
@@ -528,7 +528,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Interieur</td>
+                          <td class="py-3 px-4 text-gray-600">Woonaccessoires</td>
                           <td class="py-3 px-4 text-gray-600">Buorren 35</td>
                           <td class="py-3 px-4 text-gray-600">Terherne</td>
                           <td class="py-3 px-4 text-center">
@@ -868,7 +868,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Interieur</td>
+                          <td class="py-3 px-4 text-gray-600">Woonaccessoires</td>
                           <td class="py-3 px-4 text-gray-600">Grootzand 45</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
