--- a/nl/map.html
+++ b/nl/map.html
@@ -494,7 +494,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Telefoon reparatie</td>
+                          <td class="py-3 px-4 text-gray-600">Telefoon reparaties</td>
                           <td class="py-3 px-4 text-gray-600">Grootzand 41</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -596,7 +596,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Installatiebedrijf</td>
+                          <td class="py-3 px-4 text-gray-600">Installateur</td>
                           <td class="py-3 px-4 text-gray-600">De Opper 2</td>
                           <td class="py-3 px-4 text-gray-600">Heeg</td>
                           <td class="py-3 px-4 text-center">
