--- a/nl/map.html
+++ b/nl/map.html
@@ -397,7 +397,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Shiatsu, Acupuncture</td>
+                          <td class="py-3 px-4 text-gray-600">Shiatsu, Acupunctuur</td>
                           <td class="py-3 px-4 text-gray-600">Dr. Obe Postmastraat 1</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -766,7 +766,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Bio supermarkt</td>
+                          <td class="py-3 px-4 text-gray-600">Natuurvoedingswinkel</td>
                           <td class="py-3 px-4 text-gray-600">Singel 5</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
