--- a/nl/map.html
+++ b/nl/map.html
@@ -227,7 +227,7 @@
                           <td class="py-3 px-4 font-medium">
                             Bouwservice Wagenaar
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Construction</td>
+                          <td class="py-3 px-4 text-gray-600">Klusbedrijf</td>
                           <td class="py-3 px-4 text-gray-600">Peperstraat 10</td>
                           <td class="py-3 px-4 text-gray-600">Oudeschoot</td>
                           <td class="py-3 px-4 text-center">
@@ -970,7 +970,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Kapper & salon</td>
+                          <td class="py-3 px-4 text-gray-600">Kapper, Schoonheidssalon</td>
                           <td class="py-3 px-4 text-gray-600">Willemstraat 28</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -1004,7 +1004,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Café, Brewery</td>
+                          <td class="py-3 px-4 text-gray-600">Café, Brouwerij</td>
                           <td class="py-3 px-4 text-gray-600">Nieuwe Willemskade 8</td>
                           <td class="py-3 px-4 text-gray-600">Harlingen</td>
                           <td class="py-3 px-4 text-center">
