--- a/nl/map.html
+++ b/nl/map.html
@@ -562,7 +562,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Electrical & Security Tech</td>
+                          <td class="py-3 px-4 text-gray-600">Elektro, Beveiligingstechniek</td>
                           <td class="py-3 px-4 text-gray-600">Scharrewiel 5-A</td>
                           <td class="py-3 px-4 text-gray-600">Joure</td>
                           <td class="py-3 px-4 text-center">
@@ -902,7 +902,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Boat building & storage</td>
+                          <td class="py-3 px-4 text-gray-600">Loodsverhuur, Jachtbouw</td>
                           <td class="py-3 px-4 text-gray-600">Lytse Súdein 51</td>
                           <td class="py-3 px-4 text-gray-600">Uitwellingerga</td>
                           <td class="py-3 px-4 text-center">
