--- a/nl/map.html
+++ b/nl/map.html
@@ -424,6 +424,7 @@
                         </tr>
                       <tr class="border-b border-gray-100 hover:bg-gray-50">
                           <td class="py-3 px-4 font-medium">
+                            <a href="https://instagram.com/e.m_enjoy/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
                             E.M Enjoy
                           </td>
                           <td class="py-3 px-4 text-gray-600">Broodjeszaak</td>
